# pdbterm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/structure/: Parameters.cpp  Parameters.hpp  Protein.cpp  Protein.hpp
src/visualization/: SixelEncoder.cpp  SixelEncoder.hpp  UnicodeScreen.cpp  UnicodeScreen.hpp
